some content spacing fixes.

--- a/docs/_sass/dsa-styles.sass
+++ b/docs/_sass/dsa-styles.sass
@@ -232,7 +232,7 @@ $gray-button: darken($gray, 30%)
           font-size: 36px
           margin-top: 10%
         p
-          height: 8vh
+          min-height: 80px
 
       .platform-image
         padding: 30px 0
@@ -279,7 +279,7 @@ $gray-button: darken($gray, 30%)
             min-width: 55px
 
           .feature-text
-            height: 8vh
+            min-height: 60px
             h4
               margin-bottom: 5px
 
